Fixing the extra padding issue with content tiles.

--- a/styles.css
+++ b/styles.css
@@ -139,16 +139,23 @@
   border-radius: var(--border-radius, 10px);
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
   display: block;
-  height: 0;
+  position: relative;
+  text-decoration: none !important;
+}
+
+.page-gallery__tile-image--content-sizer {
+  display: block;
+  padding-bottom: calc(100% * var(--aspect-ratio));
+}
+
+.page-gallery__tile-image--content-wrapper {
+  bottom: 0;
+  left: 0;
   overflow: auto;
   padding: 0.5em;
-  /*
-  TODO: This leaves a bunch of extra padding at the bottom of the scrollable
-  content tile. Can I remove that somehow? Maybe have the actual content-holding
-  div be *inside* the one with the calculated height (which won't be scrollable)?
-  */
-  padding-bottom: calc(100% * var(--aspect-ratio));
-  text-decoration: none !important;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 .page-gallery__tile-image--content * {
